; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_WebUI.c_WuEnableTag.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_WebUI.c_WuEnableTag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i32] [i32 33, i32 45, i32 45, i32 37, i32 115, i32 0], align 4
@.str.1 = private unnamed_addr constant [1 x i32] zeroinitializer, align 4
@.str.2 = private unnamed_addr constant [5 x i32] [i32 37, i32 115, i32 45, i32 45, i32 0], align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**, i32*)* @WuEnableTag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @WuEnableTag(i32** %0, i32* %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32** %0, i32*** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i32, i32* @MAX_SIZE, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %5, align 8
  %11 = alloca i32, i64 %9, align 16
  store i64 %9, i64* %6, align 8
  %12 = load i32**, i32*** %3, align 8
  %13 = icmp eq i32** %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %2
  %15 = load i32*, i32** %4, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %14, %2
  store i32 1, i32* %7, align 4
  br label %31

18:                                               ; preds = %14
  %19 = mul nuw i64 4, %9
  %20 = trunc i64 %19 to i32
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @UniFormat(i32* %11, i32 %20, i8* bitcast ([6 x i32]* @.str to i8*), i32* %21)
  %23 = load i32**, i32*** %3, align 8
  %24 = call i32 @WuUniReplace(i32** %23, i32* %11, i8* bitcast ([1 x i32]* @.str.1 to i8*))
  %25 = mul nuw i64 4, %9
  %26 = trunc i64 %25 to i32
  %27 = load i32*, i32** %4, align 8
  %28 = call i32 @UniFormat(i32* %11, i32 %26, i8* bitcast ([5 x i32]* @.str.2 to i8*), i32* %27)
  %29 = load i32**, i32*** %3, align 8
  %30 = call i32 @WuUniReplace(i32** %29, i32* %11, i8* bitcast ([1 x i32]* @.str.1 to i8*))
  store i32 1, i32* %7, align 4
  br label %31

31:                                               ; preds = %18, %17
  %32 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %32)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @UniFormat(i32*, i32, i8*, i32*) #2

declare dso_local i32 @WuUniReplace(i32**, i32*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
